User Auth0 improvements
