# controller/UserController.php
@@ -15,14 +15,8 @@ class UserController extends BaseController
     {
         $requestMethod = $_SERVER["REQUEST_METHOD"];
 
-        if (strtoupper($requestMethod) === 'GET') {
-            $this->getUser();
-
-            return;
-        }
-
-        if (strtoupper($requestMethod) === 'POST') {
-            $this->createUser();
+        if (strtoupper($requestMethod) === 'PUT') {
+            $this->updateUser();
 
             return;
         }
@@ -30,45 +24,11 @@ class UserController extends BaseController
         $this->sendStatusCode422();
     }
 
-    public function getUser()
-    {
-        $uri = parse_url($_SERVER['REQUEST_URI'], PHP_URL_PATH);
-        $uri = explode( '/', $uri );
-
-        if (!array_key_exists(4, $uri)) {
-            $this->sendStatusCode422();
-
-            return;
-        }
-
-        try {
-            $model = new UserModel();
-
-            $id = $uri[4];
-            $decodedId = urldecode($id);
-            $lowerCaseId = strtolower($decodedId);
-
-            $response = $model->getUser($lowerCaseId);
-            $user = $response[0];
-
-            $responseData = json_encode($user);
-            $httpResponseHeader = self::HEADERS_200;
-        }
-        catch (Error $e) {
-            $strErrorDesc = $e->getMessage() . 'Something went wrong! Please contact support.';
-
-            $responseData = json_encode(['error' => $strErrorDesc]);
-            $httpResponseHeader = self::HEADERS_500;
-        }
-        finally {
-            $this->sendOutput($responseData, $httpResponseHeader);
-        }
-    }
-
-    public function createUser()
+    public function updateUser()
     {
         $responseData = "";
         $httpResponseHeader = "";
+        $uri = $this->getUri();
 
         try {
             $model = new UserModel();
@@ -77,34 +37,20 @@ class UserController extends BaseController
             $decodedData = json_decode($inputData);
 
             $id = $decodedData->id ?? '';
-            $nickname = $decodedData->nickname ?? '';
             $name = $decodedData->name ?? '';
-            $surname = $decodedData->surname ?? '';
-
-            $nickname = strtolower($nickname);
+            $picture = $decodedData->picture ?? '';
 
             if (
                 !(strlen($id) > 0)
-                || !(strlen($nickname) > 0)
                 || !(strlen($name) > 0)
-                || !(strlen($surname) > 0)
+                || !(strlen($picture) > 0)
             ) {
                 $this->sendStatusCode422();
 
                 return;
             }
 
-            $uri = $this->getUri();
-
-            $hasUser = $this->hasUser($id);
-
-            if ($hasUser) {
-                $this->sendStatusCode422();
-
-                return;
-            }
-
-            $model->createUser($id, $nickname, $name, $surname);
+            $model->updateUser($id, $name, $picture);
             $response = $model->getUser($id);
 
             $responseData = json_encode($response[0]);
